프로젝트 어플리케이션 에러 수정, 회원조회 코드 수정